--- a/websitez.html
+++ b/websitez.html
@@ -1,12 +1,20 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<p>
-  Nice
-</p>
+<style>
+button {
+  background-color: red;
+  font-weight: bold;
+  font-size: 20px;
+}
+</style>
 
-<button>
-  Hi!!
-</button>
+<h1>
+  Hi Sudais this is Zaki!!
+</h1>
+
+<a href="https://www.youtube.com/shorts/SXHMnicI6Pg"><button>
+  Click on this
+</button></a>
 
 <a href="https://www.youtube.com/" target="_blank">
   Youtube
