--- a/websitez.html
+++ b/websitez.html
@@ -5,6 +5,10 @@ button {
   background-color: red;
   font-weight: bold;
   font-size: 20px;
+  width: 100px;
+  height: 40px;
+  border: none;
+  border-radius: 20px;
 }
 </style>
 
@@ -16,6 +20,4 @@ button {
   Click on this
 </button></a>
 
-<a href="https://www.youtube.com/" target="_blank">
-  Youtube
-</a>
+
