--- a/websitez.html
+++ b/websitez.html
@@ -5,10 +5,11 @@ button {
   background-color: red;
   font-weight: bold;
   font-size: 20px;
-  width: 100px;
-  height: 40px;
+  width: 150px;
+  height: 60px;
   border: none;
   border-radius: 20px;
+  margin-left: 50px;
 }
 </style>
 
