--- a/websitez.html
+++ b/websitez.html
@@ -1,6 +1,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+  h1 {
+    color: yellow;
+  }
+  
 button {
   background-color: red;
   font-weight: bold;
@@ -9,7 +13,7 @@ button {
   height: 60px;
   border: none;
   border-radius: 20px;
-  margin-left: 50px;
+  margin-left: 200px;
 }
 </style>
 
