--- a/websitez.html
+++ b/websitez.html
@@ -2,18 +2,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   h1 {
-    color: yellow;
+    color: black;
   }
   
 button {
   background-color: red;
+  color: white;
   font-weight: bold;
   font-size: 20px;
   width: 150px;
   height: 60px;
   border: none;
   border-radius: 20px;
-  margin-left: 200px;
+  margin-left: 500px;
 }
 </style>
 
