--- a/websitez.html
+++ b/websitez.html
@@ -14,8 +14,9 @@ button {
   width: 150px;
   height: 60px;
   border: none;
-  border-radius: 20px;
+  border-radius: 30px;
   margin-left: 800px;
+  cursor: pointer;
 }
 </style>
 
