--- a/websitez.html
+++ b/websitez.html
@@ -24,7 +24,7 @@ button {
   Hi Sudais this is Zaki!!
 </h1>
 
-<a href="https://www.youtube.com/shorts/SXHMnicI6Pg"><button>
+<a href="https://www.youtube.com/shorts/SXHMnicI6Pg" target:"_blank"><button>
   Click on this
 </button></a>
 
