--- a/websitez.html
+++ b/websitez.html
@@ -17,7 +17,11 @@ button {
   border-radius: 30px;
   margin-left: 800px;
   cursor: pointer;
+  transition: 0.15s;
 }
+  button:hover {
+    opacity: 0.7;
+  }
 </style>
 
 <h1>
