--- a/websitez.html
+++ b/websitez.html
@@ -1,34 +1,64 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-  h1 {
-    margin-left: 730px;
-    color: black;
+  body {
+    font-family: Arial, sans-serif;
   }
   
-button {
-  background-color: red;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  width: 150px;
-  height: 60px;
-  border: none;
-  border-radius: 30px;
-  margin-left: 800px;
-  cursor: pointer;
-  transition: 0.15s;
-}
+  h1 {
+    text-align: center;
+    color: #333;
+    margin-top: 50px;
+    font-size: 36px;
+  }
+  
+  button {
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    width: 200px;
+    height: 60px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    display: block;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+  
   button:hover {
-    opacity: 0.7;
+    background-color: #c40000;
+  }
+  
+  a {
+    text-decoration: none;
+    color: #333;
+  }
+  
+  a:hover {
+    text-decoration: underline;
   }
 </style>
+</head>
+<body>
 
 <h1>
-  Hi Sudais this is Zaki!!
+  Hi Sudais, this is Zaki!!
 </h1>
-<a href="https://www.youtube.com/shorts/SXHMnicI6Pg" target="_blank"><button>
-  Click on this
-</button></a>
+
+<div style="text-align: center;">
+  <a href="https://www.youtube.com/shorts/SXHMnicI6Pg" target="_blank"><button>
+    Click on this
+  </button></a>
+</div>
+
+</body>
+</html>
+
 
 
